--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,8 +1,18 @@
-{% capture footer-file %}{% if page.custom-footer %}{% if page.body-class == "project" or page.body-class == "sketch" %}{{ page.name  | slugify }}{% else %}{{ page.short-name }}{% endif %}{% else %}home{% endif %}{% endcapture %}
+{% capture footer-file %}
+  {% if page.custom-footer %}
+    {% if page.body-class == "project" or page.body-class == "sketch" %}
+      {{ page.name  | slugify }}
+    {% else %}
+      {{ page.short-name }}
+    {% endif %}
+  {% else %}
+    home
+  {% endif %}
+{% endcapture %}
 
 <figure class="footer-logo">
-   <img srcset="{{site.baseurl}}/assets/thumbs/351x143r/lab-logo-footer-{{footer-file}}.png 1x,
-                {{site.baseurl}}/assets/thumbs/702x286r/lab-logo-footer-{{footer-file}}.png 2x"
+   <img srcset="{{site.baseurl}}/assets/thumbs/351x143r/lab-logo-footer-{{footer-file | strip }}.png 1x,
+                {{site.baseurl}}/assets/thumbs/702x286r/lab-logo-footer-{{footer-file | strip }}.png 2x"
         alt="Library Innovation Lab"
         class="img-full-width">
 </figure>
