--- a/app/_includes/description.html
+++ b/app/_includes/description.html
@@ -1,5 +1,7 @@
 {% capture description %}
-  {% if page.description %}
+  {% if page.body-class == "project" or page.body-class == "sketch" %}
+      {{ page.what_does_it_do }}
+  {% elsif page.description %}
     {{ page.description }}
   {% elsif page.excerpt %}
     {{ page.excerpt | strip_html | strip_newlines | escape_once | truncate: 160 }}
@@ -7,4 +9,4 @@
     {{ site.description }}
   {% endif %}
 {% endcapture %}
-<meta name="description" content="{{description}}">
+<meta name="description" content="{{description | strip }}">
