--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -4,7 +4,7 @@
       <figure>
         <img srcset="{{base.url}}/assets/images/header-splash-logo-ani@1x.gif 1x,
                      {{base.url}}/assets/images/header-splash-logo-ani@2x.gif 2x"
-            src="{{base.url}}/assets/images/header-splash-logo-ani%401x.gif"
+            src="{{base.url}}/assets/images/header-splash-logo-ani@1x.gif"
             alt="Library Innovation Lab"
             class="img-full-width">
       </figure>
