--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -16,7 +16,7 @@
         <a href="{{site.baseurl}}/sketches/">Sketches</a>
     </li>
     <li>
-        <a href="{{site.baseurl}}/fellows/">Fellows</a>
+        <a href="{{site.baseurl}}/collaborate/">Collaborate</a>
     </li>
     <li>
         <a href="http://librarylab.law.harvard.edu/blog">Blog</a>
