All img tags include src attribute.

--- a/app/_includes/active-project-gallery.html
+++ b/app/_includes/active-project-gallery.html
@@ -2,7 +2,8 @@
   {% for project in site.projects_active %}
     <a class="gallery-item" href="{{ project.url }}">
       <figure>
-        <img srcset="{{site.baseurl}}/assets/thumbs/400x300r/{{ project.thumbnail_image }} 1x,
+        <img src="{{site.baseurl}}/assets/thumbs/400x300r/{{ project.thumbnail_image }}"
+             srcset="{{site.baseurl}}/assets/thumbs/400x300r/{{ project.thumbnail_image }} 1x,
                      {{site.baseurl}}/assets/thumbs/800x600r/{{ project.thumbnail_image }} 2x"
              alt=""
              class="img-full-width">
