--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -11,10 +11,11 @@
 {% endcapture %}
 
 <figure class="footer-logo">
-   <img srcset="{{site.baseurl}}/assets/thumbs/351x143r/lab-logo-footer-{{footer-file | strip }}.png 1x,
-                {{site.baseurl}}/assets/thumbs/702x286r/lab-logo-footer-{{footer-file | strip }}.png 2x"
-        alt="Library Innovation Lab"
-        class="img-full-width">
+  <img src="{{site.baseurl}}/assets/thumbs/351x143r/lab-logo-footer-{{footer-file | strip }}.png"
+       srcset="{{site.baseurl}}/assets/thumbs/351x143r/lab-logo-footer-{{footer-file | strip }}.png 1x,
+               {{site.baseurl}}/assets/thumbs/702x286r/lab-logo-footer-{{footer-file | strip }}.png 2x"
+       alt="Library Innovation Lab"
+       class="img-full-width">
 </figure>
 <ul>
   <li><a href="{{site.baseurl}}/">Home</a></li>
