--- a/app/_includes/project-hero.html
+++ b/app/_includes/project-hero.html
@@ -12,7 +12,7 @@
     <!-- square for narrow widths -->
     <source srcset="{{site.baseurl}}/assets/thumbs/400x400r/{{page.hero_image_square}} 1x,
                     {{site.baseurl}}/assets/thumbs/800x800r/{{page.hero_image_square}} 2x">
-    <img srcset="{{site.baseurl}}/assets/thumbs/400x400r/{{page.hero_image_square}}"
+    <img src="{{site.baseurl}}/assets/thumbs/400x400r/{{page.hero_image_square}}"
          alt=""
          class="img-full-width">
   </picture>
