--- a/app/_includes/about-people-affiliated.html
+++ b/app/_includes/about-people-affiliated.html
@@ -3,7 +3,8 @@
   <div class="gallery-item-person" id="{{ person.name | slugify }}">
 
     <figure>
-      <img srcset=" {{site.baseurl}}/assets/thumbs/216x216c/{{person.image}} 216w,
+      <img src=" {{site.baseurl}}/assets/thumbs/432x432c/{{person.image}}"
+           srcset=" {{site.baseurl}}/assets/thumbs/216x216c/{{person.image}} 216w,
                     {{site.baseurl}}/assets/thumbs/432x432c/{{person.image}} 432w,
                     {{site.baseurl}}/assets/thumbs/648x648c/{{person.image}} 648w"
            sizes=" (min-width:1144px) 346px,
