--- a/app/_includes/active-sketch-gallery.html
+++ b/app/_includes/active-sketch-gallery.html
@@ -7,9 +7,10 @@
   {% for project in active_projects %}
     <a class="gallery-item" href="{{ project.url }}">
       <figure>
-        <img srcset=" {{site.baseurl}}/assets/thumbs/216x216r/{{ project.sketch_thumbnail_image }} 216w,
-                            {{site.baseurl}}/assets/thumbs/432x432r/{{ project.sketch_thumbnail_image }} 432w,
-                            {{site.baseurl}}/assets/thumbs/648x648r/{{ project.sketch_thumbnail_image }} 648w"
+        <img src="{{site.baseurl}}/assets/thumbs/432x432r/{{ project.sketch_thumbnail_image }}"
+             srcset=" {{site.baseurl}}/assets/thumbs/216x216r/{{ project.sketch_thumbnail_image }} 216w,
+                      {{site.baseurl}}/assets/thumbs/432x432r/{{ project.sketch_thumbnail_image }} 432w,
+                      {{site.baseurl}}/assets/thumbs/648x648r/{{ project.sketch_thumbnail_image }} 648w"
               sizes=" (min-width:1049px) 268px,
                       (min-width:640px) 184px,
                        50vw"
