--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -520,13 +520,13 @@ a[role='button'] {
   }
 }
 
-a.small[role='button'] {
-    padding: 10px;
-    margin: 15px 0 0 0;
-  }
+a.small-btn {
+  padding: 10px;
+  margin: 15px 0 0 0;
 
-a.small[role='button']:hover{
-  padding: 9px;
+  &:hover{
+    padding: 9px;
+  }
 }
 
 p a, section a {
