--- a/app/_includes/active-project-gallery.html
+++ b/app/_includes/active-project-gallery.html
@@ -9,7 +9,7 @@
              class="img-full-width">
       </figure>
       <strong class="title">{{ project.name }}</strong>
-      <span class="logline">{{ project.what_does_it_do }}</span>
+      <span class="logline">{{ project.what_does_it_do | strip }}</span>
     </a>
   {% endfor %}
 </div>
