--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -2,9 +2,9 @@
   <header id="header-splash">
     <div>
       <figure>
-        <img src="{{base.url}}/assets/images/header-splash-logo-ani@1x.gif"
-             srcset="{{base.url}}/assets/images/header-splash-logo-ani@1x.gif 1x,
-                  {{base.url}}/assets/images/header-splash-logo-ani@2x.gif 2x"
+        <img src="{{ site.baseurl }}/assets/images/header-splash-logo-ani@1x.gif"
+             srcset="{{ site.baseurl }}/assets/images/header-splash-logo-ani@1x.gif 1x,
+                     {{ site.baseurl }}/assets/images/header-splash-logo-ani@2x.gif 2x"
              alt="Library Innovation Lab"
              class="img-full-width">
       </figure>
