Use page.slug for news; return news feed for every project and sketch.

--- a/app/_layouts/project.html
+++ b/app/_layouts/project.html
@@ -62,7 +62,7 @@ layout: sectioned-page
     </div>
   {% endif %}
 
-  {% assign news = site.data.news | where: "project", page.news_slug %}
+  {% assign news = site.data.news | where: "project", page.slug %}
   {% if news.size > 0 %}
     <div class="slice news">
 
