Use page.title and page.slug, rather than a variety of other variables.

--- a/app/_includes/active-project-gallery.html
+++ b/app/_includes/active-project-gallery.html
@@ -8,7 +8,7 @@
              alt=""
              class="img-full-width">
       </figure>
-      <strong class="title">{{ project.name }}</strong>
+      <strong class="title">{{ project.title }}</strong>
       <span class="logline">{{ project.what_does_it_do | strip }}</span>
     </a>
   {% endfor %}
