--- a/app/_includes/active-sketch-gallery.html
+++ b/app/_includes/active-sketch-gallery.html
@@ -17,7 +17,7 @@
               alt=""
               class="img-full-width">
       </figure>
-      <strong class="title">{{ project.name }}</strong>
+      <strong class="title">{{ project.title }}</strong>
       <ul>
         <li class="logline">{{ project.what_does_it_do | strip }}</li>
         {% if project.start_date %}<li class="date">{{ project.start_date }}</li>{% endif %}
