--- a/app/_layouts/sectioned-page.html
+++ b/app/_layouts/sectioned-page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<body class="{{ page.body-class }} {{ page.short-name }}">
+<body class="{{ page.type }} {{ page.slug }}">
 
   {% include header.html %}
 
