--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -782,7 +782,7 @@ footer {
       }
     }
 
-    .name {
+    .title {
       display: block;
       color: #777;
       @include respond(3) {
@@ -1753,7 +1753,7 @@ section.people-unaffiliated .list {
 }
 
 // the fellows people cards
-.fellows .fellow {
+.fellow {
   margin-bottom: 24px;
 
   .intro {
@@ -1796,8 +1796,8 @@ section.people-unaffiliated .list {
   }
 }
 
-// the fellows video
-.fellows .embed-container {
+// the fellows-2016 video
+.fellows-2016 .embed-container {
   margin-top: 32px;
   margin-bottom: 32px;
 }
