--- a/app/_includes/sharing-image.html
+++ b/app/_includes/sharing-image.html
@@ -1,7 +1,7 @@
 {% capture sharing-image %}
-  {% if page.body-class == "project" %}
+  {% if page.type == "project" %}
     thumbs/400x300r/{{ page.thumbnail_image | strip }}
-  {% elsif page.body-class == "sketch" %}
+  {% elsif page.type == "sketch" %}
     thumbs/432x432r/{{ page.sketch_thumbnail_image | strip }}
   {% elsif page.sharing-image %}
     {{ page.sharing-image }}
