--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -19,7 +19,7 @@
         <a href="{{ site.baseurl }}/collaborate/">Collaborate</a>
     </li>
     <li>
-        <a href="https://lil.law.harvard.edu/blog/">Blog</a>
+        <a href="{{ site.baseurl }}/blog/">Blog</a>
     </li>
   </ul>
 </nav>
