--- a/assets/src/scss/blog.scss
+++ b/assets/src/scss/blog.scss
@@ -6,21 +6,24 @@
 ////////////////////////////////////////////////
 //  blog
 
-article.post {
-  border-top: $double solid $color-black;
-  padding: $double  0;
-  margin-top: $double;
-    footer {
-      background-color: transparent;
-      padding: 0;
-    }
-    time { display: block; }
+
+.posts-index {
+  article {
+    border-top: $double solid $color-black;
+    padding: $double  0;
+    margin-top: $double;
+  }
+
+  .sleeve:first-of-type article {
+    border-top: none;
+    margin-top: 0;
+  }
+
+  article + article {
+    margin-top: $double * 3;
+  }
+
 }
-
-article.post + article.post { margin-top: $double * 3; }
-
-//.post-header {}
-//.post-date {}
 
 .post-author {
   margin-top: 6px;
@@ -154,49 +157,12 @@ article.post + article.post { margin-top: $double * 3; }
 }
 
 .pagination {
-  ul { text-align: center; }
-  li {
-    display: none;
-    a {
-      padding: $grid;
-      display: inline-block;
-    }
+  .small-btn {
+    display: inline-block;
+    width: 49%;
+    // margin fixes bug on Safari
+    margin-bottom: 0px;
   }
-  li.prev, li.next {
-    display: table;
-    float: left;
-    width: 48%;
-    position: relative;
-    a {
-      display: table-cell;
-      vertical-align: middle;
-      text-align: center;
-      padding: $double;
-      width: 100%;
-      overflow: hidden;
-      text-indent: -1000px;
-      border-top: 1px solid $color-black;
-      background-color: transparent;
-      z-index: 10;
-      &:hover { border-color: $color-highlight; }
-    }
-    &:after {
-      content: 'Older Posts';
-      position: absolute;
-      left: 0;
-      right: 0;
-      padding-top: $double;
-      z-index: 0;
-      font-size: $size-small;
-    }
-    &:hover::after { color: $color-highlight; }
-  }
-  li.disabled { display: none !important; }
-  li.next {
-    float: right;
-    &:after { content: 'Older posts'; }
-  }
-  li.prev { &:after { content: 'Newer posts'; } }
 }
 
 @include respond(3) {
@@ -232,7 +198,7 @@ article.post + article.post { margin-top: $double * 3; }
 }
 
 @include respond(4) {
-  article {
+  article, .pagination {
     max-width: 596px;
     margin: auto;
   }
