Tags and categories displayed beneath posts.

--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -20,14 +20,7 @@ custom-css: ['blog']
         {{ content }}
       </div>
 
-{% comment %}
-      <footer>
-        {% for tag in page.tags %}
-          <p class="tags"><span class="tags-title">{{ tag }}</span></p>'
-        {% endfor %}
-
-      </footer> <!-- end article footer -->
-{% endcomment %}
+      {% include tags.html tags=page.tags categories=page.categories %}
 
     </article> <!-- end article -->
 
