--- a/assets/src/scss/blog.scss
+++ b/assets/src/scss/blog.scss
@@ -211,3 +211,14 @@
     }
   }
 }
+
+.tag, .category {
+  display: inline-block;
+  margin: 0px 5px 5px 0px;
+  padding: 0px 1em 2px;
+  border-radius: 8px;
+  font-size: .9em;
+  line-height: 1.6em;
+  color: $color-white;
+  background-color: $color-highlight;
+}
