--- a/assets/src/scss/blog.scss
+++ b/assets/src/scss/blog.scss
@@ -14,6 +14,10 @@
     margin-top: $double;
   }
 
+  h2 a {
+    border-bottom: none;
+  }
+
   .sleeve:first-of-type article {
     border-top: none;
     margin-top: 0;
