--- a/app/_layouts/tag_or_category.html
+++ b/app/_layouts/tag_or_category.html
@@ -12,7 +12,7 @@ custom-css: ['blog']
     <h1>{{ page.autopages.display_name }}</h1>
     {% for post in paginator.posts %}
       <div class="slice">
-        <h2><time class="post-date" datetime="{{ post.date | date_to_xmlschema }}" pubdate>{{ post.date | date: "%B %-d, %Y" }}</time></h2>
+        <h2><time class="post-date" datetime="{{ post.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time></h2>
         <div class="slice-body">
           <a href="{{ post.url}} ">{{ post.title }}</a>
           {% if post.author %}
