--- a/app/_layouts/sectioned-page.html
+++ b/app/_layouts/sectioned-page.html
@@ -13,6 +13,6 @@ layout: default
     </div>
   </footer>
 
-  {% comment %}<script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>{% endcomment %}
+  <script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
   {% include custom-scripts.html %}
 </body>
