Use highlight tag instead of three backticks or tildes for a fenced code block

--- a/app/assets/css/blog.scss
+++ b/app/assets/css/blog.scss
@@ -260,10 +260,10 @@
   }
 }
 
-.highlighter-rouge, .highlighter-rouge * {
+figure.highlight pre {
   overflow: scroll;
 }
-.highlight {
+figure.highlight {
   // via http://help.farbox.com/pygments.html
   background: #f8f8f8;
   .hll { background-color: #ffffcc }
